🔀 feat(kitchen-sink): add Redirects API
